--- a/HASH.DiscountCalculator/HASH.DiscountCalculator/HASH.DiscountCalculator.csproj
+++ b/HASH.DiscountCalculator/HASH.DiscountCalculator/HASH.DiscountCalculator.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
     <PackageReference Include="Grpc.Core" Version="2.29.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
   </ItemGroup>
 
 </Project>
