--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - 50051:50051
   hashproductlist:
-    build: ./HASH.ProductList/server/
+    build: ./HASH.ProductsList/server/
     image: hash-product-list
     environment:
       - NODE_PORT=3000
