--- a/HASH.DiscountCalculator/Backup/HASH.DiscountCalculator.csproj
+++ b/HASH.DiscountCalculator/Backup/HASH.DiscountCalculator.csproj
@@ -1,22 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web" ToolsVersion="Current">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>17ad59f0-47d7-4dce-80e2-4ada7ff13515</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-    <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>C:\Repos\hash-discount-calculator\HASH.DiscountCalculator\Backup\</UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Protos\discount.proto" />
   </ItemGroup>
+
   <ItemGroup>
     <Protobuf Include="Protos\discount.proto" GrpcServices="Server" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
     <PackageReference Include="Grpc.Core" Version="2.29.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
   </ItemGroup>
+
 </Project>
