--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - mongo
     environment:
       - PORT=50051
+      - HOST=0.0.0.0
       - MONGO_PORT=27017
       - MONGO_HOST=mongo
     ports:
